# MiniRAG-Hybrid-Retrieval

./: .gitignore  Makefile  README.md  TESTING_STATUS.md  cache.py  combi-transformer-mini-rag.ipynb  evaluation.py  evidence.py  extraction.py  generation.py  mini-rag.py  mini_rag.py  mini_rag_qdrant.py  pyproject.toml  requirements.txt  retrieval.py  schemas.py  small_lm.py  tokenization.py
.github/workflows/: tests.yml
data/: sample_corpus.txt
examples/: offline_minirag_demo.py
minirag/: answering.py  cache.py  evidence.py  extraction.py  factory.py  formatting.py  generation.py  retrieval.py  routing.py  schemas.py  special_routes.py  tokenization.py
tests/: test_answer_factory.py  test_basic_extraction.py  test_cache.py  test_chunk_reranker.py  test_comparison_answerer.py  test_date_extractor.py  test_evidence.py  test_evidence_pipeline.py  test_extraction_regex.py  test_extractive_validator.py  test_grounding_validator.py  test_imports.py  test_minirag_facade.py  test_mock_generator.py  test_prompt_builder.py  test_query_analyzer.py  test_real_llm_generator.py  test_regression.py  test_retrieval.py  test_retrieval_answer_pipeline.py  test_retrieval_engine.py  test_routing.py  test_sentence_candidates.py  test_structured_spec_lookup.py
