[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minirag-hybrid-retrieval"
version = "0.1.0"
description = "Learning-oriented hybrid retrieval and evidence-grounded QA package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Oliver Holzmann" }
]
dependencies = [
    "pandas",
]

[tool.setuptools.packages.find]
include = ["minirag*"]

[project.optional-dependencies]
dev = [
    "pytest",
]
